--- a/Views/DeleteSupplier.xaml
+++ b/Views/DeleteSupplier.xaml
@@ -42,24 +42,11 @@
             </Picker>
         </Border>
 
-        <Label Text="Název Kategorie" 
-               HorizontalOptions="Center"
-               FontSize="Large"
-               LineBreakMode="WordWrap"/>
 
-        <Border StyleClass="EntryBorder"
-                Margin="0,60,0,50">
-            <Entry 
-               FontSize="Large"
-               x:Name="Entry"
-               HorizontalTextAlignment="Center"
-               Text="{Binding Text}"/>
-        </Border>
-
-        <Button Text="Potvrdit změny"       
+        <Button Text="Smazat"       
                 HorizontalOptions="Center"
-                Command="{Binding ModifyCommand}"
-                CommandParameter="{Binding Text}">
+                Command="{Binding DeleteCommand}"
+                CommandParameter="{Binding SelectedSupplier}">
         </Button>
     </StackLayout>
 </ContentPage>
