--- a/Views/ModifySupplier.xaml
+++ b/Views/ModifySupplier.xaml
@@ -59,7 +59,7 @@
         <Button Text="Potvrdit změny"       
                 HorizontalOptions="Center"
                 Command="{Binding ModifyCommand}"
-                CommandParameter="{Binding Text}">
+                CommandParameter="{Binding SelectedSupplier}">
         </Button>
     </StackLayout>
 </ContentPage>
