--- a/Views/SetPassword.xaml
+++ b/Views/SetPassword.xaml
@@ -29,7 +29,7 @@
             Padding="0"/>
         
         
-        <Entry Placeholder="Enter text"
+        <Entry Placeholder="Heslo"
                HorizontalTextAlignment="Center"
                IsPassword="True"
                FontSize="50"
