--- a/Views/Modify.xaml
+++ b/Views/Modify.xaml
@@ -26,7 +26,7 @@
                     Command="{Binding NavigateCommand}"
                     CommandParameter="{x:Type Views:ModifyCategory}"/>
 
-            <Button Text="PodKatogorie"
+            <Button Text="Podkatogorie"
                      Command="{Binding NavigateCommand}"
                     CommandParameter="{x:Type Views:ModifySubCategory}"/>
 
