--- a/Views/ModifyCategory.xaml
+++ b/Views/ModifyCategory.xaml
@@ -11,7 +11,7 @@
             <Setter Property="FontSize" Value="32" />
             <Setter Property="BorderWidth" Value="1" />
             <Setter Property="BorderColor" Value="Black" />
-            <Setter Property="Margin" Value="0,20,0,0"/>
+            <Setter Property="Margin" Value="0,10,0,0"/>
             <Setter Property="CornerRadius"  Value="0"/>
         </Style>
     </ContentPage.Resources>
@@ -47,10 +47,12 @@
 
         <Button Text="Zobrazit obrázek"       
                 HorizontalOptions="Center"
+                FontSize="27"
                 Command="{Binding ShowPictureCommand}"
                 CommandParameter="{Binding SelectedCategory}"/>
         
         <Button Text="Změnit obrázek"       
+                FontSize="27"
                 HorizontalOptions="Center"
                 Command="{Binding ChangePictureCommand}"
                 CommandParameter="{Binding SelectedCategory}"/>
