--- a/Views/AdminPanel.xaml
+++ b/Views/AdminPanel.xaml
@@ -110,7 +110,7 @@
                            WidthRequest="40"
                            Margin="0,0,20,0"
                            VerticalOptions="Center"/>
-                    <Label Text="Učetnictví"
+                    <Label Text="Účetnictví"
                            VerticalOptions="Center"/>
                 </Grid>
                 <Border.GestureRecognizers>
