--- a/Views/ModifySupplier.xaml
+++ b/Views/ModifySupplier.xaml
@@ -32,7 +32,7 @@
         <Border StyleClass="PickerBorder"
                 Margin="0,0,0,80"
                 >
-            <Picker Title="Zvol Kategorii"
+            <Picker Title="Zvol dodavatele"
                 x:Name="Picker"
                 ItemsSource="{Binding ListOfSupplier}"
                 SelectedItem="{Binding SelectedSupplier}"
